--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,12 @@
-//
+// Fonts
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
+// Variables
+@import "_variables";
+
+//animate.css
+@import "node_modules/animate.css/animate";
+
+// Animations
+@import "animations";
